// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mapTimelineEvents formats authorization_expired events 1`] = `
Array [
  Object {
    "body": Array [],
    "datetime": 1585691920,
    "headline": "Authorization for $86.00 expired",
    "icon": <t
      className="is-error"
      icon="cross"
      size={24}
    />,
  },
  Object {
    "body": Array [],
    "datetime": 1585691920,
    "headline": "Payment status changed to Authorization Expired",
    "hideTimestamp": true,
    "icon": <t
      className=""
      icon="sync"
      size={24}
    />,
  },
]
`;

exports[`mapTimelineEvents formats authorization_voided events 1`] = `
Array [
  Object {
    "body": Array [],
    "datetime": 1585652279,
    "headline": "Authorization for $59.00 was voided",
    "icon": <t
      className="is-warning"
      icon="checkmark"
      size={24}
    />,
  },
  Object {
    "body": Array [],
    "datetime": 1585652279,
    "headline": "Payment status changed to Authorization Voided",
    "hideTimestamp": true,
    "icon": <t
      className=""
      icon="sync"
      size={24}
    />,
  },
]
`;

exports[`mapTimelineEvents formats authorized events 1`] = `
Array [
  Object {
    "body": Array [],
    "datetime": 1585589596,
    "headline": "A payment of $79.00 was successfully authorized",
    "icon": <t
      className="is-warning"
      icon="checkmark"
      size={24}
    />,
  },
  Object {
    "body": Array [],
    "datetime": 1585589596,
    "headline": "Payment status changed to Authorized",
    "hideTimestamp": true,
    "icon": <t
      className=""
      icon="sync"
      size={24}
    />,
  },
]
`;

exports[`mapTimelineEvents formats captured events 1`] = `
Array [
  Object {
    "body": Array [
      "Fee: $3.50",
      "Net deposit: $59.50",
    ],
    "datetime": 1585751874,
    "headline": "A payment of $63.00 was successfully charged",
    "icon": <t
      className="is-success"
      icon="checkmark"
      size={24}
    />,
  },
  Object {
    "body": Array [],
    "datetime": 1585751874,
    "headline": <React.Fragment>
      $59.50 was added to your 
      <a
        href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=dummy_po_5eaada696b281"
      >
        Apr 2, 2020 deposit
      </a>
    </React.Fragment>,
    "hideTimestamp": true,
    "icon": <t
      className=""
      icon="plus"
      size={24}
    />,
  },
  Object {
    "body": Array [],
    "datetime": 1585751874,
    "headline": "Payment status changed to Paid",
    "hideTimestamp": true,
    "icon": <t
      className=""
      icon="sync"
      size={24}
    />,
  },
]
`;

exports[`mapTimelineEvents formats card_declined events 1`] = `
Array [
  Object {
    "body": Array [],
    "datetime": 1585712113,
    "headline": "A payment of $77.00 failed",
    "icon": <t
      className="is-error"
      icon="cross"
      size={24}
    />,
  },
  Object {
    "body": Array [],
    "datetime": 1585712113,
    "headline": "Payment status changed to Failed",
    "hideTimestamp": true,
    "icon": <t
      className=""
      icon="sync"
      size={24}
    />,
  },
]
`;

exports[`mapTimelineEvents formats dispute_in_review events 1`] = `
Array [
  Object {
    "body": Array [],
    "datetime": 1585859207,
    "headline": "Challenge evidence submitted",
    "icon": <t
      className="is-success"
      icon="checkmark"
      size={24}
    />,
  },
  Object {
    "body": Array [],
    "datetime": 1585859207,
    "headline": "Payment status changed to Disputed: In Review",
    "hideTimestamp": true,
    "icon": <t
      className=""
      icon="sync"
      size={24}
    />,
  },
]
`;

exports[`mapTimelineEvents formats dispute_lost events 1`] = `
Array [
  Object {
    "body": Array [],
    "datetime": 1586055370,
    "headline": "Dispute lost. The bank ruled favor of your customer",
    "icon": <t
      className="is-error"
      icon="cross"
      size={24}
    />,
  },
  Object {
    "body": Array [],
    "datetime": 1586055370,
    "headline": "Payment status changed to Disputed: Lost",
    "hideTimestamp": true,
    "icon": <t
      className=""
      icon="sync"
      size={24}
    />,
  },
]
`;

exports[`mapTimelineEvents formats dispute_needs_response events 1`] = `
Array [
  Object {
    "body": Array [
      <a
        href="admin.php?page=wc-admin&path=%2Fpayments%2Fdisputes%2Fdetails&id=some_id"
      >
        View dispute
      </a>,
    ],
    "datetime": 1585793174,
    "headline": "Payment disputed as Fraudulent",
    "icon": <t
      className="is-error"
      icon="cross"
      size={24}
    />,
  },
  Object {
    "body": Array [
      "Disputed amount: $95.00",
      "Fee: $15.00",
    ],
    "datetime": 1585793174,
    "headline": "$110.00 will be deducted from a future deposit",
    "hideTimestamp": true,
    "icon": <t
      className=""
      icon="minus"
      size={24}
    />,
  },
  Object {
    "body": Array [],
    "datetime": 1585793174,
    "headline": "Payment status changed to Disputed: Needs Response",
    "hideTimestamp": true,
    "icon": <t
      className=""
      icon="sync"
      size={24}
    />,
  },
]
`;

exports[`mapTimelineEvents formats dispute_won events 1`] = `
Array [
  Object {
    "body": Array [],
    "datetime": 1586017250,
    "headline": "Dispute won! The bank ruled in your favor",
    "icon": <t
      className="is-success"
      icon="notice-outline"
      size={24}
    />,
  },
  Object {
    "body": Array [
      "Disputed amount: $100.00",
      "Fee: $15.00",
    ],
    "datetime": 1586017250,
    "headline": <React.Fragment>
      $115.00 was added to your 
      <a
        href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=dummy_po_5eaada696b2d3"
      >
        Apr 5, 2020 deposit
      </a>
    </React.Fragment>,
    "hideTimestamp": true,
    "icon": <t
      className=""
      icon="plus"
      size={24}
    />,
  },
  Object {
    "body": Array [],
    "datetime": 1586017250,
    "headline": "Payment status changed to Disputed: Won",
    "hideTimestamp": true,
    "icon": <t
      className=""
      icon="sync"
      size={24}
    />,
  },
]
`;

exports[`mapTimelineEvents formats full_refund events 1`] = `
Array [
  Object {
    "body": Array [],
    "datetime": 1586008266,
    "headline": "A payment of $100.00 was successfully refunded",
    "icon": <t
      className="is-success"
      icon="checkmark"
      size={24}
    />,
  },
  Object {
    "body": Array [],
    "datetime": 1586008266,
    "headline": "$100.00 will be deducted from a future deposit",
    "hideTimestamp": true,
    "icon": <t
      className=""
      icon="minus"
      size={24}
    />,
  },
  Object {
    "body": Array [],
    "datetime": 1586008266,
    "headline": "Payment status changed to Refunded",
    "hideTimestamp": true,
    "icon": <t
      className=""
      icon="sync"
      size={24}
    />,
  },
]
`;

exports[`mapTimelineEvents formats partial_refund events 1`] = `
Array [
  Object {
    "body": Array [],
    "datetime": 1585940281,
    "headline": "A payment of $50.00 was successfully refunded",
    "icon": <t
      className="is-success"
      icon="checkmark"
      size={24}
    />,
  },
  Object {
    "body": Array [],
    "datetime": 1585940281,
    "headline": "$50.00 will be deducted from a future deposit",
    "hideTimestamp": true,
    "icon": <t
      className=""
      icon="minus"
      size={24}
    />,
  },
  Object {
    "body": Array [],
    "datetime": 1585940281,
    "headline": "Payment status changed to Partial Refund",
    "hideTimestamp": true,
    "icon": <t
      className=""
      icon="sync"
      size={24}
    />,
  },
]
`;
